# Others-Cpp-Projects

./: README.md
cpp_babel/: CMakeLists.txt  CppProperties.json
cpp_babel/Babel/: Babel.sln
cpp_babel/Babel/Babel/: Audio.cpp  Audio.h  Babel.pri  Babel.pro  Babel.vcxproj  Babel.vcxproj.filters  HomeGUI.cpp  HomeGUI.h  HomeGUI.ui  LogGUI.cpp  LogGUI.h  LogGUI.qrc  LogGUI.ui  Settings.cpp  Settings.h  Settings.ui  SuperThread.cpp  SuperThread.h  mythread.cpp  mythread.h
cpp_babel/Babel/Babel/GeneratedFiles/: qrc_LogGUI.cpp  ui_HomeGUI.h  ui_LogGUI.h  ui_Settings.h
cpp_babel/Babel_server/: Babel_server.sln
cpp_babel/Babel_server/Babel_server/: Babel_server.vcxproj  Babel_server.vcxproj.filters  CMakeLists.txt  Makefile
cpp_babel/Babel_server/Babel_server/Common/: IFSAbstract.hh  ISocket.hh  MySocket.cpp  MySocket.hh  Parser.cpp  Parser.hh  Server.cpp  Server.hh  User.cpp  User.hh  main.cpp
cpp_babel/Babel_server/Babel_server/Unix/: CFSUnix.cpp  CFSUnix.hh  UnixSocket.cpp  UnixSocket.hh
cpp_babel/Babel_server/Babel_server/Windows/: CFSWindows.cpp  CFSWindows.hh  WinSocket.cpp  WinSocket.hh
cpp_babel/GUI/nico v2/Babel/Babel/: AccepteCallGUI.cpp  AccepteCallGUI.h  AccepteCallGUI.ui  Audio.cpp  Audio.h  Babel.vcxproj  Babel.vcxproj.filters  ClassDiagram.cd  Client.cpp  Client.h  Clientfunc.cpp  HomeGUI.cpp  HomeGUI.h  HomeGUI.ui  LogGUI.cpp  LogGUI.h  LogGUI.qrc  LogGUI.ui  Parser.cpp  Parser.h  Register.cpp  Register.h  Register.ui  Settings.cpp  Settings.h  SocketClient.h  SuperThread.cpp  SuperThread.h  TestUDP.h  main.cpp  myudp.cpp  myudp.h
cpp_babel/GUI/nico v2/Babel/Babel/GeneratedFiles/: qrc_LogGUI.cpp  ui_AccepteCallGUI.h  ui_HomeGUI.h  ui_LogGUI.h  ui_Register.h
cpp_babel/GUI/nico v2/Babel/Babel/lib/: opus.lib  portaudio_x64.lib
cpp_d01/ex00/: white_rabbit.c
cpp_d01/ex01/: Makefile  (+2 more)
(+182 files in other folders)
